Reconfigured model and tests to use mongodb